--- a/public/index.html
+++ b/public/index.html
@@ -38,5 +38,11 @@
 </head>
 <body>
     <h1>Live Chat App 💥</h1>
+    <section id="LogedIn" hidden="true">
+        <button id="signOutBtn">Sign Out</button>
+    </section>
+    <section id="LogedOut">
+        <button id="signInBtn">Sign in with Google</button>
+    </section>
 </body>
 </html>
