--- a/public/index.html
+++ b/public/index.html
@@ -34,15 +34,28 @@
     <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-firestore.js"></script>
 
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.0/firebase-ui-auth.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.0/firebase-ui-auth.css" />
+
     <script src="js/main.js" defer></script>
 </head>
 <body>
-    <h1>Live Chat App 💥</h1>
+    <h1>Live Chat App 😎</h1>
     <section id="LogedIn" hidden="true">
+        <form action="chat.html">
+            <input type="text" name="username" id="username">
+            <label for="username">Type in your username</label>
+            <input type="text" name="roomID" id="roomID" placeholder="Room ID">
+            <label for="roomID">Type in room ID</label>
+            
+            <button type="submit">Join room</button>
+        </form>
         <button id="signOutBtn">Sign Out</button>
     </section>
     <section id="LogedOut">
         <button id="signInBtn">Sign in with Google</button>
+        <button id="anSignIn">Sign in anonymously</button>
+        <button id="diffrence"> What's the diffrence</button>
     </section>
 </body>
 </html>
