--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,15 @@
     <section id="LogedOut">
         <button id="signInBtn">Sign in with Google</button>
         <button id="anSignIn">Sign in anonymously</button>
-        <button id="diffrence"> What's the diffrence</button>
+        <button id="descBtn"> What's the diffrence</button>
+        <section id="description" hidden="true">
+            When you sign in with your google account you get access to:
+            <list>
+                <ul>Saving rooms</ul>
+                <ul>Managing saved rooms</ul>
+            </list>
+
+        </section>
     </section>
 </body>
 </html>
